# onnxortext

./: .gitignore  .local.jenkins.win.yml  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  appveyor.yml  b.bat  requirements-dev.txt  requirements.txt  setup.py
_doc/sphinxdoc/source/: conf.py  glossary.rst  index.rst
_doc/sphinxdoc/source/blog/2021/: 2021-04-13_first.rst
_unittests/data/: custom_op_string_split.onnx
_unittests/ops_test/: common_test_ortops.cc  common_test_ortops.h  test_kernel.hpp  test_ortops.cc  test_ortops_strings.cc
_unittests/static_test/: test_base64.cc  test_ustring.cc  test_utils.cc
_unittests/ut_ops_string/: t.onnx  test_string_ops.py
ccode/include/: onnxortext.h
ccode/shared/: onnxortext.cc  onnxortext.h
ccode/source/: base64.cc
ccode/source/kernels/: debug_op.cc  debug_op.hpp  onnxortext.cc  op_equal.cc  op_equal.hpp  op_equal_impl.hpp  string_split.cc  string_split.hpp
ccode/source/utils/: base64.cc  base64.h  string_common.cc  string_common.h  string_utils.cc  string_utils.h  ustring.cc  ustring.hpp
ccodedll/: dll_onnxortext.cc  dll_onnxortext.def  dll_onnxortext.h
ccodepy/: pyfunc.cc  pykernel.h
onnxortext/: __init__.py  helper.py
test/shared_test/: test_kernel.hpp  test_ortops.cc  test_ortops_strings.cc
test/static_test/: test_base64.cc  test_strings.cc  test_utils.cc
